Add Steps for Biryani

--- a/recipes/Chicken_Biryani.html
+++ b/recipes/Chicken_Biryani.html
@@ -33,5 +33,24 @@
             <li>Vegetable Oil</li>
         </ul>
     </p>
+    <p>
+        Steps to make Biryani :- 
+        <ol>
+            <li>Marinate Chicken with yoghurt and whole spices and add food coloring.</li>
+            <li>Let it marinate for atleast to 2 hours to achieve maximum flavour let it sit overnight.</li>
+            <li>Preheat Oil.</li>
+            <li>Shallow fry Chicken pieces.</li>
+            <li>Fry Onions until they are golden brown.</li>
+            <li>Cook the fried chicken pieces with yoghurt,onion,spices,salt and turmeric.</li>
+            <li>Chicken mixer should have thick consistancy.</li>
+            <li>Intandem Boil rice till they are half cooked.</li>
+            <li>Set chicken mixer in large utensil.</li>
+            <li>Layer Fried Onions.</li>
+            <li>Layer Rice and over it also spread Fried Onions.</li>
+            <li>Add Food Coloring over rice and add coriander and spearmint</li>
+            <li>Let it Seal cook for 30 to 45 mins.</li>
+            <li>Enjoy mouth-watering, juicy biryani!</li>
+        </ol>
+    </p>
 </body>
 </html>
