Add return to main and top

--- a/recipes/Chicken_Biryani.html
+++ b/recipes/Chicken_Biryani.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Chicken Biryani</h1>
+    <h1 id="header">Chicken Biryani</h1>
     <img src="../images/Chicken_Biryani.jpeg" alt="Image of Homemade Biryani by my Dad" height="510" width="510">
     
         
@@ -51,6 +51,12 @@
             <li>Let it Seal cook for 30 to 45 mins.</li>
             <li>Enjoy mouth-watering, juicy biryani!</li>
         </ol>
+    </p>
+    <p>
+    <a href="#header">Return to Top</a>
+    </p>
+    <p>
+    <a href="../index.html">Return to Main page</a>
     </p>
 </body>
 </html>
