--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/Chicken_Biryani.html">Chicken Biryani</a>
+    <ul>
+        <li><a href="recipes/Chicken_Biryani.html">Chicken Biryani</a></li>
+        <li><a href="recipes/Pasta.html"></a></li>
+        <li><a href="recipes/RoseMilk.html"></a></li>
+    </ul>
 </body>
 </html>
