--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin recipes</h1>
     <ul>
         <li><a href="recipes/Chicken_Biryani.html">Chicken Biryani</a></li>
-        <li><a href="recipes/Pasta.html"></a></li>
-        <li><a href="recipes/RoseMilk.html"></a></li>
+        <li><a href="recipes/Pasta.html">Pasta</a></li>
+        <li><a href="recipes/RoseMilk.html">Rose Milk</a></li>
     </ul>
 </body>
 </html>
