Fix image load in Pasta
Forgot to add ../ berfore image

--- a/recipes/Pasta.html
+++ b/recipes/Pasta.html
@@ -6,7 +6,7 @@
     <title>Pasta</title>
 </head>
 <body>
-    <img src="images/Pasta.png" alt="Image of Pasta made by My Sister" height="510" width="510">
+    <img src="../images/Pasta.png" alt="Image of Pasta made by My Sister" height="310" width="310" style="background-color: transparent;">
     <h2>A College students anywhere,anytime Food</h2>
     <p>
         Pasta is my cozy food, whenever i get peckish it is easy to whip up.
