Add Ingredrients and Steps to pasta

--- a/recipes/Pasta.html
+++ b/recipes/Pasta.html
@@ -29,5 +29,18 @@
             <li>Oil</li>
         </ul>
     </p>
+    <p>
+        Steps Required:- 
+        <ol>
+            <li>Wash the pasta.</li>
+            <li>Boil pasta and tomatoes, add oil salt while they are boiling.</li>
+            <li>Saute Onions.</li>
+            <li>Grind the tomatoes to make tomato puree.</li>
+            <li>In new pan Mix pasta,tomato puree and onions</li>
+            <li>Add pasta masala and stir well.</li>
+            <li>Cook till desired consistancy is achieved.</li>
+            <li>Enjoy it while binging some shows!</li>
+        </ol>
+    </p>
 </body>
 </html>
