Add links to header and main page in pasta

--- a/recipes/Pasta.html
+++ b/recipes/Pasta.html
@@ -42,5 +42,11 @@
             <li>Enjoy it while binging some shows!</li>
         </ol>
     </p>
+    <p>
+        <a href="#header">Return to Top</a>
+    </p>
+    <p>
+        <a href="../index.html">Return to Main page</a>
+    </p>
 </body>
 </html>
