Add all content of Rose Milk with anchors

--- a/recipes/RoseMilk.html
+++ b/recipes/RoseMilk.html
@@ -6,6 +6,23 @@
     <title>Rose Milk</title>
 </head>
 <body>
-    
+    <img src="../images/Rose.png" alt="image of Rose Milk with Ice" height="310" width="310" style="background-color: transparent;">
+    <h2>After a hot,humid summer day Rose Milk is like Elixir of Life</h2>
+    <p>Honestly this not much of a recipes as it is one of my favorite drinks</p>
+    <p>
+        Ingredrients:
+        <ol>
+            <li>Chilled Milk</li>
+            <li>Rose syrup</li>
+            <li>Ice Cubes</li>
+        </ol>
+    </p>
+    <p>Mix all Ingredrients together and Enjoy!!</p>
+    <p>
+        <a href="#header">Return to Top</a>
+    </p>
+    <p>
+        <a href="../index.html">Return to Main page</a>
+    </p>
 </body>
 </html>
