Add headers to Pasta and RoseMilk

--- a/recipes/Pasta.html
+++ b/recipes/Pasta.html
@@ -6,6 +6,7 @@
     <title>Pasta</title>
 </head>
 <body>
+    <h1>Homemade Pasta</h1>
     <img src="../images/Pasta.png" alt="Image of Pasta made by My Sister" height="310" width="310" style="background-color: transparent;">
     <h2>A College students anywhere,anytime Food</h2>
     <p>
