Add id to headers

--- a/recipes/RoseMilk.html
+++ b/recipes/RoseMilk.html
@@ -6,7 +6,7 @@
     <title>Rose Milk</title>
 </head>
 <body>
-    <h1>Rose Milk</h1>
+    <h1 id="header">Rose Milk</h1>
     <img src="../images/Rose.png" alt="image of Rose Milk with Ice" height="310" width="310" style="background-color: transparent;">
     <h2>After a hot,humid summer day Rose Milk is like Elixir of Life</h2>
     <p>Honestly this not much of a recipes as it is one of my favorite drinks</p>
