--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="styles/instyle.css">
 </head>
 <body>
     <h1>Odin recipes</h1>
+    <div>
     <ul>
         <li><a href="recipes/Chicken_Biryani.html">Chicken Biryani</a></li>
         <li><a href="recipes/Pasta.html">Pasta</a></li>
         <li><a href="recipes/RoseMilk.html">Rose Milk</a></li>
     </ul>
+    </div>
 </body>
 </html>
