--- a/recipes/Chicken_Biryani.html
+++ b/recipes/Chicken_Biryani.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Biryani</title>
+    <link rel="stylesheet" href="../styles/ChickenStyle.css">
 </head>
 <body>
     <h1 id="header">Chicken Biryani</h1>
