Add Css to ChickenBiryani

--- a/recipes/Chicken_Biryani.html
+++ b/recipes/Chicken_Biryani.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1 id="header">Chicken Biryani</h1>
-    <img src="../images/Chicken_Biryani.jpeg" alt="Image of Homemade Biryani by my Dad" height="510" width="510">
-    
+    <div class="aligner">
+    <img src="../images/Chicken_Biryani.jpeg" alt="Image of Homemade Biryani by my Dad" height="410" width="410">
+    </div>
         
     <h2>   Chicken Biryani (especially made by <strong>My Dad</strong>) is my favorite dish ever. </h2> 
     <p> Chicken Biryani has lot of Variants the one shown is <strong><em >Chicken Tikka Biryani</em></strong>.
