Add Css to pasta and rosemilk

--- a/recipes/Pasta.html
+++ b/recipes/Pasta.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasta</title>
+    <link rel="stylesheet" href="../styles/PastaStyle.css">
 </head>
 <body>
     <h1 id="header">Homemade Pasta</h1>
+    <div class="aligner">
     <img src="../images/Pasta.png" alt="Image of Pasta made by My Sister" height="310" width="310" style="background-color: transparent;">
+    </div>
     <h2>A College students anywhere,anytime Food</h2>
     <p>
         Pasta is my cozy food, whenever i get peckish it is easy to whip up.
