--- a/recipes/RoseMilk.html
+++ b/recipes/RoseMilk.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rose Milk</title>
+    <link rel="stylesheet" href="../styles/RoseStyle.css"
 </head>
 <body>
     <h1 id="header">Rose Milk</h1>
+    <div class="aligner">
     <img src="../images/Rose.png" alt="image of Rose Milk with Ice" height="310" width="310" style="background-color: transparent;">
+    </div>
     <h2>After a hot,humid summer day Rose Milk is like Elixir of Life</h2>
     <p>Honestly this not much of a recipes as it is one of my favorite drinks</p>
     <p>
